sfSandBoxCode/force-app/main/default/objects/Employee_Leave_Request__c/Employee_Leave_Request__c.object-meta.xml
<CustomObject>
    <label>Employee Leave Request</label>
    <nameField>
        <displayFormat>ELR-{00000000}</displayFormat>
        <label>Employee Leave Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Leave Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>