sfSandBoxCode/force-app/main/default/objects/Employee_Leave_Request__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <description>a condition set following approval steps</description>
    <inlineHelpText>a condition set following approval steps</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved by Team Lead</fullName>
            </value>
            <value>
                <fullName>Declined by Team Lead</fullName>
            </value>
            <value>
                <fullName>Approved by HR</fullName>
            </value>
            <value>
                <fullName>Declined by HR</fullName>
            </value>
            <value>
                <fullName>Pending Cancellation</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>