sfSandBoxCode/force-app/main/default/objects/Employee_Leave_Request__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Reason for changing the No. Of Approved Leave Days</description>
    <inlineHelpText>Reason for changing the No. Of Approved Leave Days</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>