sfSandBoxCode/force-app/main/default/objects/Employee_Leave_Request__c/fields/Coverage_Plans__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Plans__c</fullName>
    <label>Coverage Plans</label>
    <type>TextArea</type>
</CustomField>