sfSandBoxCode/force-app/main/default/objects/Employee_Leave_Request__c/fields/Department_Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>Department_Team_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department Team Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employee_Leave_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>