sfSandBoxCode/force-app/main/default/objects/Employee_Leave_Request__c/fields/Employee_s_Department__c.field-meta.xml
<CustomField>
    <fullName>Employee_s_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee&#39;s Department</label>
    <referenceTo>Sanergy_Department_Unit__c</referenceTo>
    <relationshipLabel>Employee Leave Requests</relationshipLabel>
    <relationshipName>Employee_Leave_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>