sfSandBoxCode/force-app/main/default/objects/Employee_Leave_Request__c/fields/HR_Approve_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>HR_Approve_Cancellation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The HR checks this box to agree to cancel a leave request</description>
    <label>HR Approve Cancellation</label>
    <type>Checkbox</type>
</CustomField>