sfSandBoxCode/force-app/main/default/objects/Employee_Leave_Request__c/fields/Leave_Approved__c.field-meta.xml
<CustomField>
    <fullName>Leave_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The checkbox is checked if Leave has been approved otherwise it&#39;s unchecked</inlineHelpText>
    <label>Leave Approved ?</label>
    <type>Checkbox</type>
</CustomField>