sfSandBoxCode/force-app/main/default/objects/Employee_Leave_Request__c/fields/Leave_Entitlement_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Leave_Entitlement_Utilization__c</fullName>
    <label>Leave Entitlement Utilization</label>
    <referenceTo>Leave_Entitlement_Utilization__c</referenceTo>
    <relationshipLabel>Employee Leave Requests</relationshipLabel>
    <relationshipName>Employee_Time_Offs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>