sfSandBoxCode/force-app/main/default/objects/Employee_Leave_Request__c/fields/Leave_Started__c.field-meta.xml
<CustomField>
    <fullName>Leave_Started__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leave Started</label>
    <type>Checkbox</type>
</CustomField>