sfSandBoxCode/force-app/main/default/objects/Employee_Leave_Request__c/fields/Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type__c</fullName>
    <formula>Leave_Entitlement_Utilization__r.Leave_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leave Type</label>
    <type>Text</type>
</CustomField>