sfSandBoxCode/force-app/main/default/objects/Employee_Leave_Request__c/fields/Line_Manager_Account__c.field-meta.xml
<CustomField>
    <fullName>Line_Manager_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Line Manager SalesForce Account</description>
    <inlineHelpText>Line Manager SalesForce Account</inlineHelpText>
    <label>Line Manager Account</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employee_Leave_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>