sfSandBoxCode/force-app/main/default/objects/Employee_Leave_Request__c/fields/Line_Manager_Approve_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Line_Manager_Approve_Cancellation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Line Manager checks this box to agree  to Cancel a leave request</description>
    <label>Line Manager Approve Cancellation</label>
    <type>Checkbox</type>
</CustomField>