sfSandBoxCode/force-app/main/default/objects/Employee_Leave_Request__c/fields/No_Of_Approved_Leave_Days__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Approved_Leave_Days__c</fullName>
    <label>No. Of Approved Leave Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>