sfSandBoxCode/force-app/main/default/objects/Employee_Leave_Request__c/fields/No_Of_Leave_Days_Requested__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Leave_Days_Requested__c</fullName>
    <label>No. Of Leave Days Requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>