sfSandBoxCode/force-app/main/default/objects/Employee_Leave_Request__c/fields/Request_From_VFP__c.field-meta.xml
<CustomField>
    <fullName>Request_From_VFP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If request comes from Request Leave visual force page the field is checked else its unchecked</inlineHelpText>
    <label>Request From VFP</label>
    <type>Checkbox</type>
</CustomField>