sfSandBoxCode/force-app/main/default/objects/Employee_Leave_Request__c/fields/Sick_Leave_Doc_Attached__c.field-meta.xml
<CustomField>
    <fullName>Sick_Leave_Doc_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sick Leave Doc Attached</label>
    <type>Checkbox</type>
</CustomField>