sfSandBoxCode/force-app/main/default/objects/Employee_Leave_Request__c/fields/StartEndDate__c.field-meta.xml
<CustomField>
    <fullName>StartEndDate__c</fullName>
    <description>Start/End Date for Calendar Invite</description>
    <formula>TEXT(YEAR(Leave_Start_Date__c)) &amp; LPAD(TEXT(MONTH  (Leave_Start_Date__c)),2,&quot;0&quot;)&amp; LPAD(TEXT(DAY (Leave_Start_Date__c)),2,&quot;0&quot;) &amp; &quot;/&quot; &amp; TEXT(YEAR(Leave_End_Date__c + 1)) &amp; LPAD(TEXT(MONTH  (Leave_End_Date__c + 1)),2,&quot;0&quot;)&amp; LPAD(TEXT(DAY (Leave_End_Date__c + 1)),2,&quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Start/End Date for Calendar Invite</inlineHelpText>
    <label>StartEndDate</label>
    <type>Text</type>
</CustomField>