sfSandBoxCode/force-app/main/default/objects/Employee_Leave_Request__c/validationRules/LeaveDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>LeaveDateValidation</fullName>
    <active>true</active>
    <description>Leave Start Date/ End date should be in the current year</description>
    <errorConditionFormula>YEAR(Leave_Start_Date__c) == YEAR(TODAY()) &amp;&amp; YEAR(Leave_End_Date__c) == YEAR(TODAY())&amp;&amp;
Leave_End_Date__c &lt; Leave_Start_Date__c</errorConditionFormula>
    <errorDisplayField>Approval_Status__c</errorDisplayField>
    <errorMessage>Leave Start Date/ End date should be in the current year and End Date cannot be before the start date</errorMessage>
</ValidationRule>