sfSandBoxCode/force-app/main/default/objects/Employee_Leave_Request__c/validationRules/LeaveEndDateNotSameAsLeaveStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>LeaveEndDateNotSameAsLeaveStartDate</fullName>
    <active>false</active>
    <description>Leave End Date should not be the same as Leave Start Date .</description>
    <errorConditionFormula>Leave_End_Date__c  =  Leave_Start_Date__c</errorConditionFormula>
    <errorDisplayField>Leave_End_Date__c</errorDisplayField>
    <errorMessage>Leave End Date should not be the same as Leave Start Date .</errorMessage>
</ValidationRule>