sfSandBoxCode/force-app/main/default/objects/Employee_Leave_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Leave_Entitlement_Utilization__c</columns>
    <columns>Employee__c</columns>
    <columns>Leave_Type__c</columns>
    <columns>Leave_Start_Date__c</columns>
    <columns>Leave_End_Date__c</columns>
    <columns>No_Of_Leave_Days_Requested__c</columns>
    <columns>No_Of_Approved_Leave_Days__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>